# badge-firmware-2024

./: CMakeLists.txt  README.md  firmware.uf2  flasher.sh
src/: main.cpp
src/black_box/: black_box.cpp  black_box.hpp  generate_morse_flag.sh  morse.pio  morse_flag.hpp
src/entropy_encrypter/: entropy_encrypter.hpp
src/flagstore/: flagstore.cpp  flagstore.hpp
src/hello_hardware/: hello_hardware.hpp
src/weary_watchdog/: weary_watchdog.cpp  weary_watchdog.hpp
